// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SLinkHub > renders with multiple categories correctly 1`] = `
"<section data-orientation="vertical" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-16 sm:py-24 lg:py-32 gap-8 sm:gap-16">
    <div class="">
      <!--v-if-->
      <!--v-if-->
      <h2 class="text-3xl sm:text-4xl lg:text-5xl text-pretty tracking-tight font-bold text-highlighted text-left">Our Categories</h2>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"><a href="/linkhub/cat-1/" class="focus-visible:outline-primary text-muted hover:text-default group flex items-center gap-3 text-base font-medium transition-all"><span class="iconify i-lucide:arrow-right text-dimmed size-4 transition-all group-hover:translate-x-1" aria-hidden="true"></span><span>Category One</span>
        <hr class="min-w-2 flex-1 border-(--ui-border)">
      </a><a href="/linkhub/cat-2/" class="focus-visible:outline-primary text-muted hover:text-default group flex items-center gap-3 text-base font-medium transition-all"><span class="iconify i-lucide:arrow-right text-dimmed size-4 transition-all group-hover:translate-x-1" aria-hidden="true"></span><span>Category Two</span>
        <hr class="min-w-2 flex-1 border-(--ui-border)">
      </a><a href="/linkhub/cat-3/" class="focus-visible:outline-primary text-muted hover:text-default group flex items-center gap-3 text-base font-medium transition-all"><span class="iconify i-lucide:arrow-right text-dimmed size-4 transition-all group-hover:translate-x-1" aria-hidden="true"></span><span>Category Three</span>
        <hr class="min-w-2 flex-1 border-(--ui-border)">
      </a></div>
  </div>
</section>"
`;

exports[`SLinkHub > renders with no categories correctly 1`] = `
"<section data-orientation="vertical" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-16 sm:py-24 lg:py-32 gap-8 sm:gap-16">
    <!--v-if-->
    <div data-orientation="vertical" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start text-highlighted bg-default ring ring-inset ring-default">
      <!--v-if-->
      <div class="min-w-0 flex-1 flex flex-col">
        <!--v-if-->
        <div class="text-sm opacity-90">No items listed.</div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
</section>"
`;

exports[`SLinkHub > renders with one category correctly 1`] = `
"<section data-orientation="vertical" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-16 sm:py-24 lg:py-32 gap-8 sm:gap-16">
    <div class="">
      <!--v-if-->
      <!--v-if-->
      <h2 class="text-3xl sm:text-4xl lg:text-5xl text-pretty tracking-tight font-bold text-highlighted text-left">Featured Links</h2>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"><a href="/linkhub/category-1/" class="focus-visible:outline-primary text-muted hover:text-default group flex items-center gap-3 text-base font-medium transition-all"><span class="iconify i-lucide:arrow-right text-dimmed size-4 transition-all group-hover:translate-x-1" aria-hidden="true"></span><span>Category 1</span>
        <hr class="min-w-2 flex-1 border-(--ui-border)">
      </a></div>
  </div>
</section>"
`;
